Fixed an issue in which player2's ships werent showing on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -263,6 +263,10 @@ button:hover {
     .player1 {
         display: flex;
     }
+    
+    .player2 {
+        display: flex;
+    }
 
     .computer {
         display: flex;
